# zkusmoNovej

./: CMakeLists.txt
Enums/: Errors.h  GameBool.h  GameState.h  LogLevel.h  Opcode.h  Origin.h  PieceType.h  PlayerColor.h
ExternalLibraries/: magic_enum.hpp
Headers/: Chessboard.h  Client.h  Comunicator.h  Errors.h  GameLobby.h  GameRoom.h  Logger.h  Message.h  MessageManager.h  Packet.h  Request.h  RequestManager.h  Utils.h  opcode.h  problémy.md  program.h
Sources/: Chessboard.cpp  Client.cpp  Comunicator.cpp  ComunicatorO.cpp  Errors.cpp  GameLobby.cpp  GameLobby_OurRequests.cpp  GameLobby_TheirRequests.cpp  GameRoom.cpp  Logger.cpp  Message.cpp  MessageManager.cpp  Packet.cpp  Request.cpp  RequestManager.cpp  Utils.cpp  program.cpp  starejkod.cpp
